
New features:
..F....... [ZBX-6983] changed the "Status of host group triggers" and "Status of host triggers" screen elements and the "Latest 20 issues" to display triggers without events (Pavels)
..F....... [ZBX-6983] renamed the "Status of host group triggers" screen element to "Latest host group issues" and "Status of host triggers" to "Latest host issues" (Pavels)

Bug fixes:
..F....... [ZBX-6978] fixed leading and trailing spaces for translatable strings (Ivo)
..F....... [ZBX-7033] replaced HTML special characters with corresponding entity names and unicode characters (Ivo)
........S. [ZBX-7013] strndup function was replaced to avoid compilation error when non-gnu compilers are used (igors)
........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)
........S. [ZBX-6987] fixed possible crash in value cache when freeing items with out of order values (wiper)
..F....... [ZBX-7024] fixed filtering by application name "0" in Monitoring > Overview dropdown (Ivo)
A.F....... [ZBX-7026] removed automatic changing of "error" field when trigger and trigger prototype expression is changed (Ivo)
..F....... [ZBX-7027] improved request of proxies in Configuration > Hosts list and request of hosts in Administration > DM > Proxies (Ivo)
..F....... [ZBX-3878] fixed memory leaks in slide shows (Eduard)
..F....... [ZBX-7017] fixed problem with unwanted lists of services in IT services popup window (Vitalij)
..F....... [ZBX-6982] changed background color in user and user group edit form for select tags (Vitalij)
..F....... [ZBX-6973] fixed sql error in postgres database on saving host (Vitalij)

--------------------------------------------------------------------------------
Changes for 2.1.5

New features:
...G...... [ZBXNEXT-836] added windows agent wmi query support with wmi.get key (wiper)